# RL_Game_Project

./: .gitignore  README.md  bobby_carrot_colab_training.ipynb  pyrefly.toml  requirements.txt  train_colab.ipynb
Bobby_Carrot/: Commands.txt  __init__.py  train_q_learning.py
Bobby_Carrot/rl_models/: __init__.py  bc_pretrain.py  buffers.py  config.py  dataset_gen.py  evaluate.py  expert_data.py  expert_solver.py  icm.py  mcts_eval.py  networks.py  per_level_train.py  play_agent.py  ppo.py  rainbow.py  train.py
Game_Python/: pyproject.toml  run.py
Game_Python/bobby_carrot/: __init__.py  game.py  rl_env.py
